# fika-state

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  fika-demo.py  fika_observable.py  pyproject.toml  requirements.txt  schema.json  setup.py  test.json  transition.py
.github/workflows/: putblish-to-test-pipy.yml
fika/profile_engine/: _action.py  _engine.py  _fika_state.py
fika_profile_engine/: __init__.py  _driver_interface.py  _engine.py  _node.py  _trigger.py
tests/: demo.py  initialize.json  mock_driver.py  schema.json  test_initial_node.py
