[build-system]
requires = [
    "hatchling>=1.8.1",
    "pytest>=7.1.2"
]
build-backend = "hatchling.build"

[project]
name = "fika-profile-engine"
dynamic = [
    "version",
]
description = "Fika Profile Engine Library for Python"
readme = "README.md"
requires-python = ">=3.7"
authors = [
    { name = "Jose Manuel Heredia Hidalgo", email = "mane@outlook.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/mane-dev/fika-state"

[tool.hatch.version]
path = "fika_profile_engine/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/fika_profile_engine",
]
